--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator=\"iPhone 12\"",
     "web": "expo start --web",
     "start": "react-native start",
     "lint": "eslint .",
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "chance": "^1.1.7",
     "date-fns": "^2.22.1",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
@@ -20,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-draggable-flatlist": "^2.6.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/chance": "^1.1.2",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
