--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.14.5",
     "chance": "^1.1.7",
     "date-fns": "^2.22.1",
+    "debounce": "^1.2.1",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/chance": "^1.1.2",
+    "@types/debounce": "^1.2.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
