--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "chance": "^1.1.7",
     "date-fns": "^2.22.1",
     "debounce": "^1.2.1",
+    "events": "^3.3.0",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
+    "fast-diff": "^1.2.0",
+    "quill-delta": "^4.2.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -29,15 +33,19 @@
     "react-native-screens": "^3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "rich-text": "^4.1.0",
+    "sharedb": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/chance": "^1.1.2",
     "@types/debounce": "^1.2.0",
+    "@types/jest": "^26.0.23",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@types/sharedb": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-preset-expo": "~8.3.0",
