--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "eslint.packageManager": "yarn",
   "eslint.workingDirectories": [
     "mobile",
-    "backend"
+    "backend",
+    "common"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
