--- a/backend/package.json
+++ b/backend/package.json
@@ -5,25 +5,27 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts"
+    "start": "ts-node-dev --transpile-only -r tsconfig-paths/register --exit-child --poll src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@teamwork/websocket-json-stream": "^2.0.0",
-    "chance": "^1.1.7",
+    "chance": "^1.1.11",
     "express": "^4.17.1",
     "node-ts": "^5.1.1",
     "rich-text": "^4.1.0",
-    "sharedb": "^1.8.1",
+    "sharedb": "4.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.3.2",
+    "typescript": "4.8.4",
     "ws": "^7.4.6"
   },
   "devDependencies": {
-    "@types/chance": "^1.1.2",
+    "@types/chance": "^1.1.3",
     "@types/express": "^4.17.12",
-    "@types/sharedb": "^1.0.17",
-    "@types/ws": "^7.4.4"
+    "@types/sharedb": "3.3.2",
+    "@types/ws": "^7.4.4",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   }
 }
