--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,10 +11,11 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.22.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "@types/sharedb": "1.0.17",
     "axios": "^1.4.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "date-fns": "^2.30.0",
     "debounce": "^1.2.1",
     "events": "^3.3.0",
@@ -25,9 +26,10 @@
     "react-native-screens": "^3.22.1",
     "react-native-vector-icons": "^9.2.0",
     "rich-text": "^4.1.0",
-    "sharedb": "1.8.1"
+    "sharedb": "4.0.0"
   },
   "devDependencies": {
+    "@types/sharedb": "3.3.2",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
