--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -2,5 +2,15 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     "esModuleInterop": true,
-  }
+    "baseUrl": "src" /* Base directory to resolve non-absolute module names. */,
+    "paths": {
+      "@common/*": ["../../common/src/*"],
+    }
+  },
+  "references": [
+    {
+      // This is needed so that imports from common are properly resolved
+      "path": "../common"
+    },
+  ]
 }
