--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev --transpile-only -r tsconfig-paths/register --exit-child --poll src/app.ts"
+    "start": "ts-node-dev --transpile-only -r tsconfig-paths/register --exit-child --poll src/app.ts",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --fix --ext .ts src"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +27,17 @@
     "@types/express": "^4.17.12",
     "@types/sharedb": "3.3.2",
     "@types/ws": "^7.4.4",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@veri.co/eslint-plugin-veri": "^3.0.0",
+    "@waltari/eslint-plugin-ban-falsy-enum-values": "^1.0.1",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-falsy": "^1.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.0.0",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0"
   }
