--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-proposal-decorators": "^7.22.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@tanstack/react-query": "^4.29.23",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "date-fns": "^2.30.0",
@@ -29,7 +30,6 @@
     "sharedb": "4.0.0"
   },
   "devDependencies": {
-    "@types/sharedb": "3.3.2",
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
@@ -43,6 +43,7 @@
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/sharedb": "3.3.2",
     "@veri.co/eslint-plugin-veri": "^3.0.0",
     "@waltari/eslint-plugin-ban-falsy-enum-values": "^1.0.1",
     "babel-jest": "^29.2.1",
