--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "ios12": "react-native run-ios --simulator=\"iPhone 12\"",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
