refactor: lint and type fixes

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,8 +17,7 @@
     "strict": true,
     /* Type declaration files to be included in compilation. */
     "types": [
-      "node",
-      "jest"
+      "node"
     ],
     /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "esModuleInterop": true,
