--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
+    "test:watch": "jest --watch",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
